--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-14 10:47:10
+lastsearch = 2024-07-14 13:23:09
 
 [tiki.vn]
 match = -47.6%%
@@ -22,9 +22,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
-match = -9.5%%
-title = Phim Mai Có Chiếu Ở Taiwan Không
-url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
+match = -19.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -215,4 +215,9 @@ url = https://motchilltv.to/quoc-gia/dai-loan
 match = -123.8%%
 title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt 18 ...
 url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
+
+[cau-ca.com]
+match = -42.9%%
+title = Bảng thủy triều Su-ao Kang - đài loan - CAU-CA
+url = https://cau-ca.com/tw/taiwan/su-ao-kang
 
