--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-14 10:53:01
+lastsearch = 2024-07-14 13:18:27
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67snQOSE&sig=ACfU3U3mxGLBdnTXP5xJCWwE7AJ1-V1YWw&hl=en&sa=X&ved=2ahUKEwi3jK_k0KWHAxVtFVkFHT64CH4Q6AF6BAgaEAM
+match = -176.5%%
+title = Official Army Register - Page 356 - Google Books Result
+url = https://books.google.com/books?id=TOYsAAAAIAAJ&pg=RA1-PA356&lpg=RA1-PA356&dq=man+in+hoa+dep+16&source=bl&ots=m4CdSsLhFZ&sig=ACfU3U1B_724Tis0b24lMBp1DWEIw0BV7A&hl=en&sa=X&ved=2ahUKEwiZ0r2l8aWHAxXrweYEHb08DnMQ6AF6BAgXEAM
 
 [tax.vermont.gov]
 match = -29.4%%
