--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-14 10:36:04
+lastsearch = 2024-07-14 13:18:41
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,14 +22,14 @@ title = Riot is cutting back budget on esports? : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = 5.6%%
-title = Vietnamese cuisine
-url = https://en.wikipedia.org/wiki/Vietnamese_cuisine
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = 15.0%%
-title = Chăn ga gối đệm Hà Nội
-url = https://www.facebook.com/demgiare.net/posts/bán-ruột-đệm-bông-ép-cứng-ruột-đệm-mút-giá-rẻhttpdemgiarenetban-ruot-bong-ep-cun/642059146147067/
+match = -160.0%%
+title = West Point Department of History - CPT Makonen Campbell asks ...
+url = https://www.facebook.com/photo.php?fbid=2240494186000553&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -110.0%%
-title = SUCUMBA #leagueoflegends #lore #lol #moba #conto ...
-url = https://www.tiktok.com/@ionianzin/video/7067163576338828549
+match = -145.0%%
+title = Authentic Korean Street Food in Parramatta | Tteobokki & ...
+url = https://www.tiktok.com/@jensfoodfeed/video/7326417846177697025
 
 [www.imdb.com]
 match = 0.0%%
@@ -330,4 +330,9 @@ url = https://www.koreanclass101.com/korean-age/
 match = -145.0%%
 title = Zenless Zone Zero - launch traileren a miHoYo legújabb ...
 url = https://www.gamekapocs.hu/hir/84195/zenless_zone_zero_launch_traileren_a_mihoyo_legujabb_nagy_dobasa
+
+[uk.news.yahoo.com]
+match = -125.0%%
+title = What happened to Psy after the success of Gangnam Style?
+url = https://uk.news.yahoo.com/on-this-day-psy-gangnam-style-075352911.html
 
