--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-14 15:19:12
+lastsearch = 2024-07-14 16:20:36
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/South_China_Sea
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYp-cbN0I&sig=ACfU3U03cenNu57fPMxR84JkhLw9jjMSkw&hl=en&sa=X&ved=2ahUKEwjNgPqjjKaHAxV0F1kFHUDvCqsQ6AF6BAgeEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYp-ceU_N&sig=ACfU3U2zHEnO8GySW1gvYqnuG88qTVrfCg&hl=en&sa=X&ved=2ahUKEwj0kd6AmqaHAxVOkYkEHS3oBHcQ6AF6BAgeEAM
 
 [www.travelweekly.com]
 match = -87.0%%
