--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-14 15:42:19
+lastsearch = 2024-07-14 16:19:54
 
 [chieutruc.info]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt
 url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
-match = -59.1%%
-title = Sự liên quan giữa sinh non và cổ tử cung ngắn
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/su-lien-quan-giua-sinh-non-va-co-tu-cung-ngan/
+match = 4.5%%
+title = Sự phát triển của thai nhi tuần 18
+url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/su-phat-trien-cua-thai-nhi-tuan-18/
 
 [www.youtube.com]
 match = -109.1%%
