--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-14 14:33:09
+lastsearch = 2024-07-14 16:19:21
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -333,8 +333,8 @@ url = https://ahmedabadcity.gov.in/PTAX/DuesSearch
 
 [eva.vn]
 match = -206.2%%
-title = Ngắm cánh rừng xanh bạt ngàn trên Đại lộ 7.500 tỷ đồng ...
-url = https://eva.vn/di-dau-xem-gi/ngam-canh-rung-xanh-bat-ngan-tren-dai-lo-7500-ty-dong-rong-toi-16-lan-xe-dai-va-dep-bac-nhat-viet-nam-c40a600088.html
+title = 5 món chân gà cực ngon lạ miệng lại giàu collagen, ai ăn ...
+url = https://eva.vn/bep-eva/5-mon-chan-ga-cuc-ngon-la-mieng-lai-giau-collagen-ai-an-lan-dau-cung-thich-c162a602005.html
 
 [truyenfull.vn]
 match = -187.5%%
