--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-14 14:48:41
+lastsearch = 2024-07-14 16:21:44
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
+match = -94.1%%
+title = ISAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/ISA.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -17.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -72,9 +72,9 @@ title = As an aurora spreads across the stars following the Witness’s ...
 url = https://www.tiktok.com/@destinythegame/video/7378920467576442155
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/John_20:22
+match = -116.7%%
+title = Anggun
+url = https://en.wikipedia.org/wiki/Anggun
 
 [www.instagram.com]
 match = -182.4%%
