--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-14 04:45:35
+lastsearch = 2024-07-14 16:17:15
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Cruise Calendar 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -40.0%%
+title = Flight and Travel Options
+url = https://www.tui.co.uk/destinations/info/travel-options
 
 [www.travelgossip.co.uk]
 match = -126.7%%
@@ -17,9 +17,9 @@ title = TUI's new Birmingham-Singapore flight takes off
 url = https://www.travelgossip.co.uk/latestnews/tuis-birmingham-singapore-flight-takes-off/
 
 [www.flightaware.com]
-match = -213.3%%
-title = BY165 (TOM165) TUI Airways Flight Tracking and History ...
-url = https://www.flightaware.com/live/flight/TOM165/history/20240315/0520Z/WSSS/EGCC
+match = -60.0%%
+title = Live TUI Airways Flight Status
+url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
 match = -20.0%%
