--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-14 15:41:17
+lastsearch = 2024-07-14 16:38:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Bộ ga chun chần bốn mùa 180x200 SH
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 
 [songhongonline.vn]
-match = 0.0%%
-title = Bộ sản phẩm SH_BC22 063
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-063
+match = 4.3%%
+title = Bộ sản phẩm SH_BC22 060
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-060
 
 [everon.online]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+title = Everon EST-22032 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-est22032.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
