--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-14 14:34:40
+lastsearch = 2024-07-14 16:32:11
 
 [everon.com.vn]
-match = 11.1%%
-title = Bộ Chăn Ga Everon EPM 22069
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22069/
+match = 22.5%%
+title = Bộ Chăn Ga Everon EPM 22073 Phạm Ngọc Thạch
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22073/
 
 [everon.online]
-match = -44.4%%
-title = Bộ Everon EPM22063
-url = https://everon.online/products/bo-everon-epm-22063
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
