--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-14 09:14:44
+lastsearch = 2024-07-14 16:31:27
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = -23.1%%
+title = Coco Chan - Wellesley
+url = https://hk.linkedin.com/in/coco-chan-734351222
 
 [www.instagram.com]
 match = -238.5%%
@@ -44,7 +44,7 @@ url = https://admissions.hku.hk/hkuer
 [www.alamy.com]
 match = -246.2%%
 title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
-url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
+url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-cross-year-activity-in-hong-kong-china-31-december-2018-image261310010.html
 
 [www.tripadvisor.com]
 match = -200.0%%
