--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-14 15:37:09
+lastsearch = 2024-07-14 16:34:23
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -47,9 +47,9 @@ title = Bộ đồ chơi xúc xắc lục lạc gặm nướu GoryeoBaby Hàn ..
 url = https://shopee.vn/Bộ-đồ-chơi-xúc-xắc-lục-lạc-gặm-nướu-GoryeoBaby-Hàn-Quốc-cho-bé-từ-0-24-tháng-i.239824437.4932236617
 
 [www.thegioididong.com]
-match = -193.8%%
-title = Samsung Galaxy A14 4GB - Chính hãng, giá tốt, có trả góp
-url = https://www.thegioididong.com/dtdd/samsung-galaxy-a14-4gb
+match = -206.2%%
+title = Top 13 game ít dung lượng trên mobile cực hay để trải ...
+url = https://www.thegioididong.com/game-app/top-game-it-dung-luong-tren-mobile-cuc-hay-de-trai-nghiem-1358044
 
 [saigontourist.edu.vn]
 match = -100.0%%
