--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-14 14:31:09
+lastsearch = 2024-07-14 16:51:44
 
 [everon.online]
-match = -32.4%%
-title = 4 – Everon Tân Mai | Tổng Đại Lý Chăn Ga Gối Đệm Everon ...
-url = https://everon.online/blogs/video/4
+match = 50.0%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [www.everonvn.vn]
 match = -32.4%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 5.9%%
-title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
+match = 17.6%%
+title = Bộ ga chun chăn chần bốn mùa Goodnight Mori 4 Chi Tiết
+url = https://vuanem.com/bo-ga-chun-chan-chan-bon-mua-goodnight-mori-4-chi-tiet.html
 
 [everonvn.com.vn]
 match = 32.1%%
@@ -73,8 +73,8 @@ url = https://anpha.vuanem.com/chan-ga-goi/chan
 
 [everonminhkhai.com]
 match = 72.7%%
-title = Bộ ga chun chần bốn mùa – Trang 2
-url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan-bon-mua/page/2/?per_page=60
+title = Bộ ga chun chần bốn mùa – Trang 5
+url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan-bon-mua/page/5/
 
 [m.facebook.com]
 match = -32.4%%
