--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-14 16:19:21
+lastsearch = 2024-07-14 16:47:51
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -97,8 +97,8 @@ title = luật poker omaha-App Store5.93.517
 url = https://sv.ut.edu.vn/newsr4ru7ie5.html
 
 [yamaha-motor.com.vn]
-match = -250.0%%
-title = PG-1
+match = -43.8%%
+title = PG-1 - Yamaha Motor Việt Nam
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
