--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-14 16:21:44
+lastsearch = 2024-07-14 16:52:44
 
 [www.bible.com]
 match = -94.1%%
@@ -12,9 +12,9 @@ title = ISAIA 22 | MIZCLBSI Bible | YouVersion
 url = https://www.bible.com/bible/1048/ISA.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
-match = -111.8%%
-title = Exodus 1-40 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
+match = -123.5%%
+title = Thufingte 1-31 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
 match = -129.4%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -17.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -205.9%%
+title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
