--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-14 15:46:09
+lastsearch = 2024-07-14 16:50:31
 
 [en.wikipedia.org]
-match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jXlida&sig=ACfU3U1p6xAoD0T5oprwSnTCqzgVnpvFhg&hl=en&sa=X&ved=2ahUKEwjz25vOmaGHAxVSAzQIHccMB4gQ6AF6BAgUEAM
 
 [30rates.com]
-match = -104.3%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -91.3%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.ncbi.nlm.nih.gov]
 match = -100.0%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = 4.5%%
-title = Lab Life Facial Device
-url = https://www.tiktok.com/discover/lab-life-facial-device
+match = -13.0%%
+title = What Hair Dye to Use for King Von
+url = https://www.tiktok.com/discover/what-hair-dye-to-use-for-king-von
 
 [www.unikorea.go.kr]
 match = -113.0%%
@@ -335,4 +335,9 @@ url = https://www.instant-gaming.com/en/
 match = -21.7%%
 title = Fabiana Justus (@fabianajustus)
 url = https://www.instagram.com/fabianajustus/?hl=en
+
+[archiveofourown.org]
+match = 4.3%%
+title = Stray Kids (Band) - Works
+url = https://archiveofourown.org/tags/Stray Kids (Band)/works
 
