--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-14 16:34:23
+lastsearch = 2024-07-14 17:14:17
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -32,9 +32,9 @@ title = MLBB | LẠC KEY VỀ VIỆT NAM, TỐP MỠ ĐỐI ĐẦU NGƯỜI ...
 url = https://www.youtube.com/watch?v=me0dvgGuCGs
 
 [tuyensinh247.com]
-match = -218.8%%
-title = Một con lắc đơn gồm vật nhỏ có khối lượng 50g và sợi dây ...
-url = https://tuyensinh247.com/bai-tap-616975.html
+match = -225.0%%
+title = Một con lắc đơn có chiều dài dây treo l = 90 cm, khối lượng ...
+url = https://tuyensinh247.com/bai-tap-18187.html
 
 [asisov.org.vn]
 match = -125.0%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -156.2%%
-title = Bộ đồ chơi xúc xắc lục lạc gặm nướu GoryeoBaby Hàn ...
-url = https://shopee.vn/Bộ-đồ-chơi-xúc-xắc-lục-lạc-gặm-nướu-GoryeoBaby-Hàn-Quốc-cho-bé-từ-0-24-tháng-i.239824437.4932236617
+match = -212.5%%
+title = Đồ chơi treo nôi cũi cho bé sơ sinh phát nhạc tự xoay, có ...
+url = https://shopee.vn/Đồ-chơi-treo-nôi-cũi-cho-bé-sơ-sinh-phát-nhạc-tự-xoay-có-đèn-chiếu-hình-lục-lạc-gặm-nướu-điều-khiển-từ-xa-đa-năng-i.256186540.22038728340
 
 [www.thegioididong.com]
 match = -206.2%%
