--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-14 16:33:30
+lastsearch = 2024-07-14 17:21:36
 
 [everonvn.com.vn]
 match = 0.0%%
@@ -12,8 +12,8 @@ title = Vỏ Gối Everon Giảm Giá Es1366
 url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
 
 [www.lazada.vn]
-match = -144.4%%
-title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được ...
+match = -172.2%%
+title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được chọn ...
 url = https://www.lazada.vn/products/ready-vo-goi-nam-vo-goi-dau-kich-thuoc-45x65-duoc-chon-mau-i2364886208.html
 
 [www.reddit.com]
@@ -32,18 +32,18 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = 0.0%%
-title = Vỏ gối ES1801 45x65 - Điệp Xuân
+match = 11.1%%
+title = Điệp Xuân Vỏ gối ES1801 45x65
 url = https://www.diepxuan.com/vo-goi-es1801-45x65.html
 
 [www.everonqb.com]
-match = -105.6%%
-title = Vỏ gối EP1823 BEARS 45x65 - Everon Quảng Bình Trang Chủ
+match = -38.9%%
+title = Everon Quảng Bình Vỏ gối EP1823 BEARS 45x65
 url = https://www.everonqb.com/vo-goi-ep1823-bears-45x65.html
 
 [shopee.vn]
-match = -116.7%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
+match = -127.8%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
